--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-sweetalert2": "^0.6.0",
+    "sweetalert2": "^11.8.0",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
