--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-sweetalert2": "^0.6.0",
     "sweetalert2": "^11.8.0",
     "sweetalert2-react-content": "^5.0.7",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
